--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -21,5 +21,5 @@ jobs:
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          branch: main
+          branch: gh-pagess
           folder: build
