--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -2,8 +2,8 @@ name: Github Pages Deploy
 
 on:
   push:
-    branches: 
-      - "main"
+    branches:
+      - main
 
 jobs:
   build: 
@@ -21,5 +21,4 @@ jobs:
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          branch: gh-pages
           folder: build
