--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -3,7 +3,7 @@ name: Github Pages Deploy
 on:
   push:
     branches:
-      - main
+      - "main"
 
 jobs:
   build: 
@@ -15,10 +15,11 @@ jobs:
     
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v1
       - name: Install and build
         run: npm install && npm run build
       - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@v4
+        uses: JamesIves/github-pages-deploy-action@4.1.1
         with:
+          branch: gh-pages
           folder: build
