--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -21,5 +21,5 @@ jobs:
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.1
         with:
-          branch: gh-pages
+          branch: main
           folder: build
