--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "bootstrap": "^5.2.3",
     "bootstrap-table": "^1.21.2",
     "gh-pages": "^5.0.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
